*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.41 ===
* Added definition of MacOS dependencies in build scripts.

=== 1.0.40 ===
* Fixed build for musl library (contributed by Daniel Martinez).
* Added lsp::fixed_int functions to simplify cast of size_t to fixed-width data type.
* Updated module versions in dependencies.

=== 1.0.39 ===
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.38 ===
* Locale settings from the <stdlib/locale.h> are now applied in thread-local context.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.37 ===
* Updated definition of atomic operations.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.36 ===
* Added inplace new definition.

=== 1.0.35 ===
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.34 ===
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.33 ===
* Implemented advance_ptr and advance_ptr_bytes functions.
* Introduced stdlib/locale.h header and SET_LOCALE_SCOPED macro for easy locale
  change and update.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.32 ===
* Added realloc_aligned function.
* Added round_pow2 function for rounding integer values up to power of 2.

=== 1.0.31 ===
* Fixed several issues reported by PVS Studio static analyzer.
* Added release_ptr() template method for releasing pointers that should be freed by finally statement.

=== 1.0.30 ===
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.29 ===
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.28 ===
* Removed Makefile.d. Dependencies are now automatically generated at the build stage.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.27 ===
* Small header updates.
