@@ -3,6 +3,7 @@
 *******************************************************************************
 
 === 1.0.41 ===
+* Updated definition of conversion of size_t and ssize_t to uintN_t and intN_t respectively.
 * Added definition of MacOS dependencies in build scripts.
 
 === 1.0.40 ===
